--- a/StyleIT.css
+++ b/StyleIT.css
@@ -3,6 +3,11 @@ html {
     scroll-behavior: smooth;
 }
 
+#logodesign {
+    max-width: 6%;
+    
+}
+
 .straight-line {
     border-top: 3px solid;
     color: #ffd700;
@@ -93,6 +98,16 @@ p {
 
 nav {
     padding: 18px 0;
+    display:flex;
+    align-items: center;
+}
+
+#homeButt{
+    margin
+}
+
+#camButt {
+    margin-left:80vw;
 }
 
 .mainMenu {
