--- a/AiCoach.css
+++ b/AiCoach.css
@@ -31,7 +31,7 @@ html {
     font-size: 18px;
     font-weight: 500;
     margin-bottom: 20px;
-    background-color: #141414;
+    background-color: white;
     color: rgb(226, 223, 223);
   }
   .result p {
